welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:2: error: not found: value equalOK
	if(equalOK) {
           ^